<resources>
    <string name="app_name">Currency Converter</string>
    <string name="valute_left_side">USD</string>
    <string name="value_left">2.50</string>
    <string name="value_right">183.75</string>
    <string name="swap">Swap</string>
    <string name="valute_right_side">RUB</string>
    <string name="title_activity_currency_selection_dialog">Currency Selection</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>