<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <EditText
        android:id="@+id/value_left"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:inputType="numberDecimal"
        android:text="@string/value_left"
        android:textColorHint="@color/black"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18"
        android:autofillHints="0.00" />

    <EditText
        android:id="@+id/value_right"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:inputType="numberDecimal"
        android:text="@string/value_right"
        android:textColorHint="@color/black"
        android:textSize="32sp"
        app:layout_constraintBaseline_toBaselineOf="@id/value_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="0.00" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/ic_popup_sync"
        app:layout_constraintBottom_toTopOf="@+id/button_val_left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value_left"
        android:contentDescription="@string/swap"
        android:onClick="swap"/>

    <Button
        android:id="@+id/button_val_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valute_left_side"
        android:textAppearance="@style/Widget.AppCompat.Button"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:onClick="changeCurrencyLeft"/>

    <Button
        android:id="@+id/button_val_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valute_right_side"
        android:textAppearance="@style/Widget.AppCompat.Button"
        android:textSize="32sp"
        app:layout_constraintBaseline_toBaselineOf="@id/button_val_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="changeCurrencyRight"/>


</android.support.constraint.ConstraintLayout>